# -genomic--simulation

./: CMakeLists.txt  Doxyfile.in  PlotSimulation.R  README.md
data/: input.txt  results.txt  test_input.txt
src/: CMakeLists.txt  Data.cpp  Data.hpp  Globals.hpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  SimulationsExecutor.cpp  SimulationsExecutor.hpp  main.cpp
test/: main.cpp
